--- a/HAMS/app/src/main/res/values/strings.xml
+++ b/HAMS/app/src/main/res/values/strings.xml
@@ -73,4 +73,10 @@
     <string name="home">Home</string>
     <string name="name">name</string>
     <string name="back">Back</string>
+    <string name="pending">Pending</string>
+    <string name="rejected">Rejected</string>
+    <string name="accepted">Accepted</string>
+    <string name="accept">Accept</string>
+    <string name="reject">Reject</string>
+    <string name="accept_all">Accept All</string>
 </resources>
