Creation of appointment foundation

--- a/HAMS/app/src/main/res/values/strings.xml
+++ b/HAMS/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="submit_shift">Submit Shift</string>
     <string name="pick_start_time">Pick Start Time</string>
     <string name="pick_end_time">Pick End Time</string>
+    <string name="approved">Approved</string>
 </resources>
