--- a/HAMS/app/src/main/res/values/strings.xml
+++ b/HAMS/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="book_an_appointment">Book an appointment</string>
     <string name="search">Search</string>
     <string name="search_results">Search results</string>
+    <string name="cancel">Cancel</string>
 </resources>
