--- a/HAMS/app/src/main/res/values/strings.xml
+++ b/HAMS/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="search">Search</string>
     <string name="search_results">Search results</string>
     <string name="cancel">Cancel</string>
+    <string name="rate">Rate</string>
 </resources>
